insert new logo

--- a/styles/index.less
+++ b/styles/index.less
@@ -6,7 +6,7 @@
 }
 
 #idai-world-dropdown {
-	left: 0px;
+	left: 0;
 	position: absolute;
 }
 
@@ -25,7 +25,7 @@
 }
 
 #idai-world-dropdown a {
-	width: 60px
+	width: 60px;
 }
 // Prevent caret icon from being added to dropdown <a> element by bootstrap4 css
 #idai-world-dropdown a:after {
@@ -35,6 +35,7 @@
 #header-dai-griffon {
 	height: 25px;
 
+	/*
 	@media (min-width: @screen-desktop) {
 		position: absolute;
 		bottom: 0px;
@@ -45,6 +46,8 @@
 		right: 0px;
 		top: 3px;
 	}
+
+	*/
 }
 
 #idai-publications-logo {
