--- a/styles/index.less
+++ b/styles/index.less
@@ -13,7 +13,7 @@
 // Hide idai-world-dropdown in user navigation on mobile devices
 #navigationUser #idai-world-dropdown {
 
-	@media not (min-width: @screen-desktop) {
+	@media all not (min-width: @screen-desktop) {
 		display: none;
 	}
 }
@@ -27,6 +27,7 @@
 #idai-world-dropdown a {
 	width: 60px;
 }
+
 // Prevent caret icon from being added to dropdown <a> element by bootstrap4 css
 #idai-world-dropdown a:after {
 	content: none;
@@ -35,19 +36,16 @@
 #header-dai-griffon {
 	height: 25px;
 
-	/*
-	@media (min-width: @screen-desktop) {
+	@media all (min-width: @screen-desktop) {
 		position: absolute;
 		bottom: 0px;
 	}
 
-	@media not (min-width: @screen-desktop) {
+	@media all not (min-width: @screen-desktop) {
 		position: absolute;
 		right: 0px;
 		top: 3px;
 	}
-
-	*/
 }
 
 #idai-publications-logo {
