Fix Safari @media queries

--- a/styles/index.less
+++ b/styles/index.less
@@ -13,7 +13,7 @@
 // Hide idai-world-dropdown in user navigation on mobile devices
 #navigationUser #idai-world-dropdown {
 
-	@media not (min-width: @screen-desktop) {
+	@media not all and (min-width: @screen-desktop) {
 		display: none;
 	}
 }
@@ -41,7 +41,7 @@
 		bottom: 0px;
 	}
 
-	@media not (min-width: @screen-desktop) {
+	@media not all and (min-width: @screen-desktop) {
 		position: absolute;
 		right: 0px;
 		top: 3px;
