--- a/styles/index.less
+++ b/styles/index.less
@@ -36,6 +36,7 @@
 #header-dai-griffon {
 	height: 25px;
 
+	/*
 	@media all (min-width: @screen-desktop) {
 		position: absolute;
 		bottom: 0px;
@@ -46,6 +47,7 @@
 		right: 0px;
 		top: 3px;
 	}
+	*/
 }
 
 #idai-publications-logo {
