move @font-face to index.less

--- a/styles/index.less
+++ b/styles/index.less
@@ -1,3 +1,12 @@
+@font-face {
+	font-family: "Cargan";
+	font-weight: 300;
+	font-style: normal;
+	src: url("fonts/Cargan-Light.woff2") format("woff2"),           /* Super Modern Browsers */
+	url("fonts/Cargan-Light.woff") format("woff"); format('woff'),  /* Modern Browsers */
+
+}
+
 @idai-gradient: linear-gradient(to right, rgba(106, 164, 184, 0.95) 0%, rgba(71, 123, 199, 0.95) 100%);
 
 .idai-world-header,
