--- a/styles/index.less
+++ b/styles/index.less
@@ -1,9 +1,9 @@
 @font-face {
-	font-family: "Cargan";
+	font-family: 'Cargan';
 	font-weight: 300;
 	font-style: normal;
-	src: url("fonts/Cargan-Light.woff2") format("woff2"),           /* Super Modern Browsers */
-	url("fonts/Cargan-Light.woff") format("woff"); format('woff'),  /* Modern Browsers */
+	src: url('fonts/Cargan-Light.woff2') format('woff2'),           /* Super Modern Browsers */
+	url('fonts/Cargan-Light.woff') format('woff'); format('woff'),  /* Modern Browsers */
 
 }
 
