--- a/styles/index.less
+++ b/styles/index.less
@@ -1,9 +1,11 @@
+@path-fonts: "/fonts";
+
 @font-face {
 	font-family: 'Cargan';
 	font-weight: 300;
 	font-style: normal;
-	src: url('fonts/Cargan-Light.woff2') format('woff2'),           /* Super Modern Browsers */
-	url('fonts/Cargan-Light.woff') format('woff'); format('woff'),  /* Modern Browsers */
+	src: url('@{path-fonts}/Cargan-Light.woff2') format('woff2'),           /* Super Modern Browsers */
+	url('@{path-fonts}/Cargan-Light.woff') format('woff'); format('woff'),  /* Modern Browsers */
 
 }
 
