hide idai-world dropdown (small devices)

--- a/styles/index.less
+++ b/styles/index.less
@@ -1,6 +1,7 @@
-/* LESS-Variables
+/* Variables
 ------------------*/
 @idai-gradient: linear-gradient(to right, rgba(106, 164, 184, 0.95) 0%, rgba(71, 123, 199, 0) 95%);
+@header-img-path: "images/idai_publications_header_sw.jpg";
 
 /* dai-header
 ---------------*/
@@ -30,11 +31,10 @@ iframe {
 	left: 0;
 	position: absolute;
 
-	/* Hide idai-world-dropdown in user navigation on mobile devices
+	/* Hide idai-world-dropdown in user navigation on mobile devices */
 	@media not all and (min-width: 1199px) {
 		display: none;
 	}
-	*/
 }
 
 #idai-world-dropdown a {
