rgb to rgba specs

--- a/styles/index.less
+++ b/styles/index.less
@@ -180,7 +180,7 @@ body {
 	float: left;
 	line-height: 2.857rem;
 	font-size: 2.8rem;
-	text-shadow: 0 0 5px rgb(0 0 0 / 30%);
+	text-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 	letter-spacing: .03em;
 	text-decoration: none;
 	padding: 2vw;
