--- a/styles/index.less
+++ b/styles/index.less
@@ -2,8 +2,8 @@
 Variables
 ------------------*/
 @idai-gradient: linear-gradient(to right, rgba(106, 164, 184, 0.95) 0%, rgba(71, 123, 199, 0) 95%);
-@header-img-path: ".../images/idai_publications_header_sw.jpg";
-@idaiworldbanner-path: "../images/idaiworld-banner.png";
+@header-img-path: "plugins/themes/publications-theme/images/idai_publications_header_sw.jpg";
+@idaiworldbanner-path: "plugins/themes/publications-theme/images/idaiworld-banner.png";
 
 /* -------------
 dai-header
