--- a/styles/index.less
+++ b/styles/index.less
@@ -333,15 +333,15 @@ body {
 @media only screen and (max-width: 991px) {
 
 	li.profile {
-		background: linear-gradient(to right, rgb(106 164 184) 100%, rgb(71 123 199 / 0%) 100%);
+		background: linear-gradient(to right, rgba(106, 164, 184,1), rgba(71, 123, 199, 0));
 	}
 
 	#language-dropdown {
-		background: linear-gradient(to right, rgb(106 164 184) 100%, rgb(71 123 199 / 0%) 100%);
+		background: linear-gradient(to right, rgba(106, 164, 184, 1), rgba(71 123 199 / 0));
 	}
 
 	#idai-world-dropdown {
-		background: linear-gradient(to right, rgb(106 164 184) 100%, rgb(71 123 199 / 0%) 100%);
+		background: linear-gradient(to right, rgba(106, 164, 184, 1), rgba(71, 123, 199, 0));
 	}
 
 	#header-lang-globe {
