correct some more rgba specs (aarghhhh)

--- a/styles/index.less
+++ b/styles/index.less
@@ -370,7 +370,7 @@ body {
 	font-size: 1.22rem;
 	font-weight: 400;
 	line-height: 2.143rem;
-	color: rgba(0 0, 0, 0.74);
+	color: rgba(0, 0, 0, 0.74);
 }
 
 /* monograph single page */
@@ -528,11 +528,11 @@ li.series {
 @media only screen and (max-width: 991px) {
 
 	li.profile {
-		background: linear-gradient(to right, rgba(106, 164, 184,1), rgba(71, 123, 199, 0));
+		background: linear-gradient(to right, rgba(106, 164, 184, 1), rgba(71, 123, 199, 0));
 	}
 
 	#language-dropdown {
-		background: linear-gradient(to right, rgba(106, 164, 184, 1), rgba(71 123 199 / 0));
+		background: linear-gradient(to right, rgba(106, 164, 184, 1), rgba(71, 123, 199, 0));
 	}
 
 	#idai-world-dropdown {
