--- a/styles/index.less
+++ b/styles/index.less
@@ -260,13 +260,12 @@ body {
 }
 
 /* --- buttons ---*/
-
 .cmp_button, .cmp_download_link, .cmp_form .buttons button,
 .page_lost_password .buttons button, .page_search .cmp_search button,
 .obj_monograph_full .files .link a, .obj_monograph_full .files .pub_format_remote a,
 .obj_monograph_full .files .pub_format_single a, .block_make_submission a, .obj_galley_link {
 	display: inline-block;
-	padding: 0 1.0715rem;
+	padding: 0.5rem 2rem;
 	background: #5d6671;
 	border: none;
 	border-radius: 3px;
