--- a/styles/index.less
+++ b/styles/index.less
@@ -2,8 +2,9 @@
 Variables
 ------------------*/
 @idai-gradient: linear-gradient(to right, rgba(106, 164, 184, 0.95) 0%, rgba(71, 123, 199, 0) 95%);
-@header-img-path: "https://publications.test.dainst.org/books/plugins/themes/publications-theme/images/idai_publications_header_sw.jpg";
 @idaiworldbanner-path: "https://publications.test.dainst.org/books/plugins/themes/publications-theme/images/idaiworld-banner.png";
+
+// @header-img-path: "https://publications.test.dainst.org/books/plugins/themes/publications-theme/images/idai_publications_header_sw.jpg";
 
 /* -------------
 dai-header
@@ -157,7 +158,7 @@ body {
 }
 
 .pkp_structure_head {
-	background: center / cover no-repeat url(@header-img-path);
+	background: none; 		/* center / cover no-repeat url(@header-img-path); */
 	border-top: none;
 	border-bottom: none;
 }
