minor style adjustment

--- a/styles/index.less
+++ b/styles/index.less
@@ -18,8 +18,8 @@ dai-header
 
 #navigationUser {
 	background: @idai-gradient;
-	box-shadow: 2px -1px 10px 0px #2a2a367d;
-	-webkit-box-shadow: 2px -1px 10px 0px #2a2a367d;
+	box-shadow: 1px -1px 10px 0px #59595b;
+	-webkit-box-shadow: 1px -1px 10px 0px #59595b;
 	width: 100%;
 	padding: 0 1vw;
 }
@@ -352,8 +352,8 @@ body {
 	transform-origin: center;
 	will-change: transform;
 	transition: all 2s ease-in-out;
-	box-shadow: 4px 5px 0px 0px #aca9a9;
-	-webkit-box-shadow: 4px 5px 0px 0px #aca9a9;
+	box-shadow: 4px 5px 0px 0px #e3e3e3;
+	-webkit-box-shadow: 4px 5px 0px 0px #e3e3e3;
 }
 
 .obj_monograph_summary>*, .obj_monograph_summary .title {
@@ -365,12 +365,13 @@ body {
 	top: 0;
 	left: 0;
 	margin: 0;
-	background: #f7f7f7;
+	background: none;
 	padding: 0 0.714rem 0 2vw;
 	font-size: 1.22rem;
 	font-weight: 400;
 	line-height: 2.143rem;
 	color: rgba(0, 0, 0, 0.74);
+	border-bottom: 1px solid #ddd;
 }
 
 /* monograph single page */
@@ -488,11 +489,11 @@ li.series {
 	transition: all 2s ease-in-out;
 	-moz-transition: all 2s ease-in-out;
 	-o-transition: all 2s ease-in-out;
-	transform: scale(1.015);
+	transform: scale(1.01);
 	transform-origin: center;
 	will-change: transform;
 	box-shadow: none;
-	max-width: 26.5em;
+	max-width: 26.4em;
 }
 
 .pkp_page_index .journals .thumb+.body {
@@ -523,7 +524,7 @@ li.series {
 }
 
 .pkp_page_index .journals>ul>li {
-	border-top: 1px solid #e6e6e6;
+	border-top: 1px solid #f8f8f8;
 }
 
 .pkp_page_index .journals>ul>li a {
