--- a/styles/index.less
+++ b/styles/index.less
@@ -274,8 +274,8 @@ body {
 .cmp_button, .cmp_download_link, .cmp_form .buttons button,
 .page_lost_password .buttons button, .page_search .cmp_search button,
 .obj_monograph_full .files .link a, .obj_monograph_full .files .pub_format_remote a,
-.obj_monograph_full .files .pub_format_single a, .block_make_submission a,
-.obj_galley_link, .submit, .block_make_submission_link {
+.obj_monograph_full .files .pub_format_single a,
+.obj_galley_link {
 	display: inline-block;
 	padding: 0.5rem 1rem;
 	background: #5d6671;
