enlarge iDAI.publications-logo

--- a/styles/index.less
+++ b/styles/index.less
@@ -51,12 +51,12 @@ iframe {
 }
 
 #idai-publications-logo {
-	height: 30px;
+	height: 35px;
 	position: absolute;
 	padding-left: 15px;
 	max-width: unset;
 	left: 30px;
-	top: 5px;
+	top: 3px;
 }
 
 #language-dropdown {
@@ -290,6 +290,10 @@ body {
 	text-decoration: none;
 	text-shadow:none;
 	margin: 0.1vw;
+}
+
+.block_make_submission a {
+	padding: 1rem 1rem;
 }
 
 /*------------------
