remove overlapping border  for "More Citation formats" button

--- a/styles/index.less
+++ b/styles/index.less
@@ -296,6 +296,10 @@ body {
 	padding: 1rem 1rem;
 }
 
+.obj_article_details .citation_display .citation_formats_button:focus {
+	background: none;
+}
+
 /*------------------
 = > OMP specific
 -------------------*/
