--- a/styles/index.less
+++ b/styles/index.less
@@ -272,7 +272,7 @@ body {
 
 /* --- buttons ---*/
 .cmp_button, .cmp_download_link, .cmp_form .buttons button,
-.page_lost_password .buttons button, .page_search .cmp_search button,
+.page_lost_password .buttons button, .cmp_search button,
 .obj_monograph_full .files .link a, .obj_monograph_full .files .pub_format_remote a,
 .obj_monograph_full .files .pub_format_single a,
 .obj_galley_link {
@@ -294,6 +294,10 @@ body {
 
 .block_make_submission a {
 	padding: 1rem 1rem;
+}
+
+.cmp_button {
+	padding: 0.7rem 1rem;
 }
 
 .obj_article_details .citation_display .citation_formats_button:focus {
