fix ojs search button again

--- a/styles/index.less
+++ b/styles/index.less
@@ -272,9 +272,8 @@ body {
 
 /* --- buttons ---*/
 .cmp_button, .cmp_download_link, .cmp_form .buttons button,
-.page_lost_password .buttons button, .cmp_search button,
-.obj_monograph_full .files .link a, .obj_monograph_full .files .pub_format_remote a,
-.obj_monograph_full .files .pub_format_single a,
+.page_lost_password .buttons button, .obj_monograph_full .files .link a,
+.obj_monograph_full .files .pub_format_remote a, .obj_monograph_full .files .pub_format_single a,
 .obj_galley_link {
 	display: inline-block;
 	padding: 0.5rem 1rem;
