--- a/styles/index.less
+++ b/styles/index.less
@@ -271,8 +271,7 @@ body {
 }
 
 /* --- buttons ---*/
-.cmp_button, .cmp_download_link, .cmp_form .buttons button,
-.page_lost_password .buttons button, .obj_monograph_full .files .link a,
+.cmp_button, .cmp_download_link, .page_lost_password .buttons button, .obj_monograph_full .files .link a,
 .obj_monograph_full .files .pub_format_remote a, .obj_monograph_full .files .pub_format_single a,
 .obj_galley_link {
 	display: inline-block;
