--- a/styles/index.less
+++ b/styles/index.less
@@ -270,7 +270,7 @@ body {
 	min-height: 50vw;
 }
 
-/* --- buttons ---*/
+/* --- buttons ---
 .cmp_button, .cmp_download_link, .page_lost_password .buttons button, .obj_monograph_full .files .link a,
 .obj_monograph_full .files .pub_format_remote a, .obj_monograph_full .files .pub_format_single a,
 .obj_galley_link {
@@ -289,7 +289,7 @@ body {
 	text-shadow:none;
 	margin: 0.1vw;
 }
-
+*/
 .block_make_submission a {
 	padding: 1rem 1rem;
 }
