--- a/styles/index.less
+++ b/styles/index.less
@@ -1,7 +1,7 @@
 /* ----------------
 Variables
 ------------------*/
-@idai-gradient: linear-gradient(to right, rgba(106,164,184,0.95) 0%, rgb(71 123 199 / 66%) 95%);
+@idai-gradient: linear-gradient(to right, rgba(106,164,184,0.95) 0%, rgba(71,123,199,0.66) 95%);
 @idaiworldbanner-path: "https://publications.test.dainst.org/books/plugins/themes/publications-theme/images/idaiworld-banner.png";
 
 // @header-img-path: "https://publications.test.dainst.org/books/plugins/themes/publications-theme/images/idai_publications_header_sw.jpg";
