remove header transparency on mobile devices

--- a/styles/index.less
+++ b/styles/index.less
@@ -676,6 +676,7 @@ li.series {
 
 	.pkp_navigation_user_wrapper {
 		position: absolute;
+		background: linear-gradient(to right, rgba(106,164,184,1) 0%, rgba(71,123,199,1) 95%);
 	}
 
 	.has_site_logo .pkp_head_wrapper {
@@ -689,18 +690,6 @@ li.series {
 	.pkp_site_name .is_text {
 		font-size: 1rem;
 		padding: 0;
-	}
-
-	li.profile {
-		background: linear-gradient(to right, rgba(106, 164, 184, 1), rgba(71, 123, 199, 0));
-	}
-
-	#language-dropdown {
-		background: linear-gradient(to right, rgba(106, 164, 184, 1), rgba(71, 123, 199, 0));
-	}
-
-	#idai-world-dropdown {
-		background: linear-gradient(to right, rgba(106, 164, 184, 1), rgba(71, 123, 199, 0));
 	}
 
 	#header-lang-globe {
