force display of vertical scrollbar

--- a/styles/index.less
+++ b/styles/index.less
@@ -148,6 +148,7 @@ li.profile {
 html {
 	background-size: contain;
 	background: url(@idaiworldbanner-path) repeat;
+	overflow-y: scroll;
 }
 
 body {
@@ -299,6 +300,10 @@ body {
 
 .cmp_button {
 	padding: 0.75rem 1rem;
+}
+
+.obj_monograph_full .files .pub_format_remote a:after {
+	display:none;
 }
 
 .page_search .submit button:after {
