--- a/styles/index.less
+++ b/styles/index.less
@@ -318,6 +318,10 @@ button .submit {
 	display:none;
 }
 
+.obj_monograph_full .files .pub_format_remote a {
+	padding: 1rem 1rem;
+}
+
 /*------------------
 = > OMP specific
 -------------------*/
