fix collission of pages and authors element

--- a/styles/index.less
+++ b/styles/index.less
@@ -588,7 +588,9 @@ li.series {
 .obj_article_details .main_entry .item .label {
 	margin: 0 0 0.5rem;
 }
-
+.obj_article_summary .authors {
+	padding-right: 10em;
+}
 .obj_article_details .authors li {
 	margin-bottom: 0.8rem;
 }
