--- a/styles/index.less
+++ b/styles/index.less
@@ -286,7 +286,7 @@ body {
 	box-shadow: inset 0 -1em 1em rgba(0, 0, 0, 0.1);
 	-webkit-box-shadow: inset 0 -1em 1em rgba(0, 0, 0, 0.1);
 	font-size: .93rem;
-	line-height: calc(2.143rem - 2px);
+	line-height: calc(1.2rem);
 	font-weight: 500;
 	color: #feffff;
 	text-decoration: none;
