set font-weight of authors name to normal

--- a/styles/index.less
+++ b/styles/index.less
@@ -584,7 +584,6 @@ li.series {
 .obj_article_details .item {
 	padding: 2vh 2.143rem;
 }
-
 .obj_article_details .main_entry .item .label {
 	margin: 0 0 0.5rem;
 }
@@ -594,6 +593,11 @@ li.series {
 .obj_article_details .authors li {
 	margin-bottom: 0.8rem;
 }
+
+.obj_article_details .authors .name {
+	font-weight: normal;
+}
+
 .obj_article_details .authors .affiliation {
 	font-size: 0.9em;
 }
