style reference list

--- a/styles/index.less
+++ b/styles/index.less
@@ -608,6 +608,11 @@ li.series {
 	background: #131313;
 }
 
+.obj_article_details .references p {
+	font-size: 0.9em;
+	line-height: 1.5;
+}
+
 /* ---------------------------
 => Styles for SMALL DEVICES
 (OJS and OMP)
