restyle reference list

--- a/styles/index.less
+++ b/styles/index.less
@@ -611,6 +611,10 @@ li.series {
 .obj_article_details .references p {
 	font-size: 0.9em;
 	line-height: 1.5;
+	margin-bottom: 1.5vh;
+	display: list-item;
+	list-style: square;
+	margin-left: 2vw;
 }
 
 /* ---------------------------
