add reference styles to books also

--- a/styles/index.less
+++ b/styles/index.less
@@ -431,6 +431,15 @@ button .submit {
 	font-size: 0.9em;
 }
 
+.obj_monograph_full .references p {
+	font-size: 0.9em;
+	line-height: 1.5;
+	margin-bottom: 1.5vh;
+	display: list-item;
+	list-style: square;
+	margin-left: 2vw;
+}
+
 ul.contributors {
 	margin: 0;
 	list-style-type: none;
