--- a/styles/index.less
+++ b/styles/index.less
@@ -322,6 +322,10 @@ button .submit {
 	padding: 0.5rem 1rem;
 }
 
+p.doi-value {
+	margin-top: 1vh;
+}
+
 /*------------------
 = > OMP specific
 -------------------*/
