--- a/styles/index.less
+++ b/styles/index.less
@@ -312,6 +312,7 @@ button .submit {
 
 /* Reference Lists */
 .references p {
+	font-family: 'Cargan';
 	font-size: 0.9em;
 	line-height: 1.5;
 	margin-bottom: 1.5vh;
