optimize styles of landing-page

--- a/styles/index.less
+++ b/styles/index.less
@@ -321,6 +321,10 @@ button .submit {
 	margin-left: 2vw;
 }
 
+p.doi-value {
+	margin-top:2vh;
+}
+
 /*------------------
 = > OMP specific
 -------------------*/
@@ -575,8 +579,8 @@ li.series {
 }
 
 .obj_article_details .row {
-	border-top: 1px solid #fff;
-	border-bottom: 1px solid #fff;
+	border-top: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
 }
 
 .obj_article_summary>.title {
@@ -747,7 +751,6 @@ li.series {
 		width: 100%;
 		padding-left: 1vw;
 	}
-
 }
 
 /* Hide idai-world-dropdown in user navigation on mobile devices */
