add search.tpl for OJS
beware of collisions with search.tpl for OMP (?)

--- a/styles/index.less
+++ b/styles/index.less
@@ -306,6 +306,12 @@ body {
 	display:none;
 }
 
+.page_search .indexTerms {
+	float: left;
+	width: 50%;
+	margin-top: 20px
+}
+
 button .submit {
 	padding: 0.75rem 1rem;
 }
@@ -316,9 +322,6 @@ button .submit {
 	font-size: 0.9em;
 	line-height: 1.5;
 	margin-bottom: 1.5vh;
-	display: list-item;
-	list-style: square;
-	margin-left: 2vw;
 }
 
 p.doi-value {
