reorder search field and adjust label keys

--- a/styles/index.less
+++ b/styles/index.less
@@ -310,6 +310,14 @@ button .submit {
 	padding: 0.75rem 1rem;
 }
 
+[type="search"] {
+	padding: 1vh;
+}
+
+.page_search .author {
+	margin-top: 2vh;
+}
+
 /* Reference Lists */
 .references p {
 	font-family: 'Cargan';
