adjust zooms for wide screens

--- a/styles/index.less
+++ b/styles/index.less
@@ -773,6 +773,21 @@ li.series {
 monitors (OJS and OMP)
 -----------------------------*/
 
+
+@media only screen and (min-width: 1600px) {
+	body {
+		zoom: 1.2;
+		-ms-zoom: 1.2;
+		-webkit-zoom: 1.2;
+		-moz-transform:  scale(1.2,1.2);
+	}
+}
+
 @media only screen and (min-width: 1800px) {
-	body { zoom: 1.25 }
+	body {
+		zoom: 1.25;
+		-ms-zoom: 1.25;
+		-webkit-zoom: 1.25;
+		-moz-transform:  scale(1.25,1.25);
+	}
 }
