add zoom to html

--- a/styles/index.less
+++ b/styles/index.less
@@ -775,19 +775,27 @@ monitors (OJS and OMP)
 
 
 @media only screen and (min-width: 1600px) {
-	body {
+	html {
 		zoom: 1.2;
 		-ms-zoom: 1.2;
 		-webkit-zoom: 1.2;
 		-moz-transform:  scale(1.2,1.2);
 	}
+	#idai-world-dropdown a {
+		padding: 1.2vh 1vw;
+	}
+
 }
 
 @media only screen and (min-width: 1800px) {
-	body {
+	html {
 		zoom: 1.25;
 		-ms-zoom: 1.25;
 		-webkit-zoom: 1.25;
 		-moz-transform:  scale(1.25,1.25);
+	}
+	#idai-world-dropdown a {
+		font-size: 23px;
+		padding: 1.2vh 1vw;
 	}
 }
